--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <title></title>
     </head>
     <body>
-<div id="map-title">PLAN CADASTRAL AUA (AUACAD)</div>
+<div id="map-title">PLAN CADASTRAL AUACAD</div>
 <div id="map-info-btn">i</div>
 <div id="map-info-box">
     <h3>Guide d’utilisation</h3>
