--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         #map {
     width: calc(100% - 40px); /* on réduit la largeur pour compenser les marges gauche + droite */
     height: calc(100vh - 40px); /* idem pour la hauteur */
-    margin: 10px;
+    margin: 20px 20px 40px 20px;
     padding: 0;
     box-sizing: border-box;
     }
