--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
         <script src="js/leaflet-measure.js"></script>
         <script src="js/leaflet-search.js"></script>
         <script src="data/AUACAD_4.js"></script>
-        <script>
+<script>
+		var activeParcel = null;
         var highlightLayer;
         function highlightFeature(e) {
             highlightLayer = e.target;
@@ -339,8 +340,7 @@
                             e.target._eventParents[i].resetStyle(e.target);
                         }
                     }
-                    if (typeof layer.closePopup == 'function') {
-                        layer.closePopup();
+
                     } else {
                         layer.eachLayer(function(feature){
                             feature.closePopup()
