--- a/index.html
+++ b/index.html
@@ -334,21 +334,18 @@
         layer_GoogleSatelliteHybrid_3;
         function pop_AUACAD_4(feature, layer) {
             layer.on({
-                mouseout: function(e) {
-                    for (var i in e.target._eventParents) {
-                        if (typeof e.target._eventParents[i].resetStyle === 'function') {
-                            e.target._eventParents[i].resetStyle(e.target);
-                        }
-                    }
+    mouseover: highlightFeature,
+    mouseout: function (e) {
+        if (activeParcel !== layer) {
+            for (var i in e.target._eventParents) {
+                if (typeof e.target._eventParents[i].resetStyle === 'function') {
+                    e.target._eventParents[i].resetStyle(e.target);
+                }
+            }
+        }
+    }
+});
 
-                    } else {
-                        layer.eachLayer(function(feature){
-                            feature.closePopup()
-                        });
-                    }
-                },
-                mouseover: highlightFeature,
-            });
             var popupContent = '<table>\
                     <tr>\
                         <th scope="row">lot</th>\
